@@ -6,6 +6,8 @@
 	  Also, added a possible "default" case for converse-case blocks, and a
 	  "user_choice" expression which pushes the last-selected answer in the stack.
 	* Fixed SI turtle (bug #2020101).
+	* Hostile creatures now attack the avatar once more -- and the avatar will
+	  also target them when in combat mode (bug #2024437).
 
 2008-07-21	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	Modified animation recycles to fix bug #2020103; recycle (if nonzero) is now
